# serializer version: 1
# name: test_edit_yak_get
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Editing test.dj
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
    <script src="https://unpkg.com/@djot/djot@0.3.2/dist/djot.js">
    </script>
    <script src="/static/js/codejar.min.js">
    </script>
    <script src="/static/js/highlight.js">
    </script>
   </head>
   <body class="layout">
    <header class="header">
     <div class="container">
      <div class="header__bar">
       <a class="brand" href="/yaks">
        <div class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <div class="header__center">
        <span>
         Editing: test.dj (Root)
        </span>
       </div>
       <nav>
        <ul class="nav__list">
         <li>
          <a class="nav__link" href="/yaks">
           Yaks
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner">
     <div class="container">
      <div class="editor__header">
      </div>
      <form id="editor_form" method="post">
       <input name="yak" type="hidden" value="test.dj"/>
       <div class="editor" data-gramm="false" data-manual="">
       </div>
      </form>
      <div class="editor__actions">
       <div class="container">
        <button class="button button--primary" hx-post="/edit" hx-swap="none" hx-vals="js:{content: getEditorContent(), yak: 'test.dj'}" id="save-btn">
         Save Changes
        </button>
        <span class="editor__status" id="save-status">
        </span>
       </div>
      </div>
     </div>
    </main>
    <script>
     window.serverContent = "Test yak content";
    </script>
    <script src="/static/js/editor.js" type="module">
    </script>
   </body>
  </html>
  
  '''
# ---
# name: test_yaks_endpoint
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Yaks in ./test_data/mock_djot_dir_0
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
   </head>
   <body class="layout">
    <header class="header">
     <div class="container">
      <div class="header__bar">
       <a class="brand" href="/yaks">
        <div class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <div class="header__center">
       </div>
       <nav>
        <ul class="nav__list">
         <li>
          <a class="nav__link nav__link--active" href="/yaks">
           Yaks
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner">
     <div class="container">
      <h1>
       Yaks in ./test_data/mock_djot_dir_0
      </h1>
      <p>
       Showing 3 of 3 yaks (Page 1 of 1)
      </p>
      <div class="sort-controls">
       <span class="sort-controls__label">
        Sort by:
       </span>
       <a class="button button--sm button--primary" href="/yaks?sort_by=name">
        Name (Created At)
       </a>
       <a class="button button--sm" href="/yaks?sort_by=modified_date">
        Modified Date
       </a>
      </div>
      <div class="filter-controls">
       <span class="filter-controls__label">
        Filter by category:
       </span>
       <a class="button button--sm button--primary" href="/yaks?sort_by=name">
        All
       </a>
       <a class="button button--sm" href="/yaks?sort_by=name&amp;category=mock_djot_dir_0" style="border-color: hsl(71, 70%, 50%)">
        Mock_djot_dir_0
       </a>
       <a class="button button--sm" href="/yaks?sort_by=name&amp;category=subdirectory-2" style="border-color: hsl(326, 70%, 50%)">
        Subdirectory-2
       </a>
       <a class="button button--sm" href="/yaks?sort_by=name&amp;category=subdirectory-3" style="border-color: hsl(327, 70%, 50%)">
        Subdirectory-3
       </a>
      </div>
      <div class="cards">
       <a class="card" href="/edit?yak=subdirectory-3/yak3.dj" style="border-color: hsl(327, 70%, 50%)">
        <div class="card__body">
         <p>
          # Yak 3  This is a test yak number 3  Unrelated to yak 1 or yak 2
         </p>
        </div>
        <div class="card__tooltip">
         subdirectory-3 | yak3.dj | 2025-05-01 10:00:00
        </div>
       </a>
       <a class="card" href="/edit?yak=subdirectory-2/yak2.dj" style="border-color: hsl(326, 70%, 50%)">
        <div class="card__body">
         <p>
          # Yak 2  &lt;https://www.ecosia.org/search?method=index&amp;q=yak&gt;  This is a test yak number 2
         </p>
        </div>
        <div class="card__tooltip">
         subdirectory-2 | yak2.dj | 2025-05-01 10:00:00
        </div>
       </a>
       <a class="card" href="/edit?yak=yak1.dj" style="border-color: hsl(71, 70%, 50%)">
        <div class="card__body">
         <p>
          # Yak 1  &lt;https://www.ecosia.org/search?method=index&amp;q=yak&gt;  This is a test yak number 1
         </p>
        </div>
        <div class="card__tooltip">
         mock_djot_dir_0 | yak1.dj | 2025-05-01 10:00:00
        </div>
       </a>
      </div>
     </div>
    </main>
   </body>
  </html>
  
  '''
# ---
